# mfapi-mcp-server

./: .gitignore  README.md  pyproject.toml  server.py
.mcp/: server.json
