[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mfapi-mcp-server"
version = "0.1.0"
description = "Local MCP server for the mfapi.in Indian mutual funds API"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mfapi-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
